fix: correct catalog collapse toggle payload (#1007)

--- a/src/cook-web/src/app/c/[[...id]]/Components/CourseCatalog/CourseCatalog.module.scss
+++ b/src/cook-web/src/app/c/[[...id]]/Components/CourseCatalog/CourseCatalog.module.scss
@@ -22,12 +22,6 @@
   }
 
   &.collapse {
-    .titleRow {
-      .collapseBtn {
-        transform: rotate(-180deg);
-      }
-    }
-
     .sectionList {
       height: 0;
       overflow: hidden;
